# ComfyUI-AnyLLM

./: README.md  anyllm_node.py  comfyui_manager.json  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py  env_var_get.py  google_chat.py  google_gemini.py
